Removed code smell